[gd_scene load_steps=5 format=3 uid="uid://p3qpu0ujxkis"]

[ext_resource type="Script" uid="uid://dko2jflkn5qtx" path="res://data/scene/ui/VotePanel.gd" id="1_r7ixh"]
[ext_resource type="Script" uid="uid://c6ou7173i57do" path="res://src/ui/DynamicLabel.gd" id="2_aa6de"]
[ext_resource type="PackedScene" uid="uid://cq8as1ma0gr7k" path="res://data/scene/ui/vote/VoteListEntry.tscn" id="3_1sg75"]
[ext_resource type="FontVariation" uid="uid://ckx3gh6vh6t5e" path="res://data/theme_elements/bold_font_variation.tres" id="4_vlxba"]

[node name="VotePanel" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -520.0
offset_top = -396.0
offset_right = 520.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_r7ixh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="DynamicLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Vote for the next map"
horizontal_alignment = 1
script = ExtResource("2_aa6de")

[node name="Timer" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vlxba")
text = "15s"
horizontal_alignment = 1
script = ExtResource("2_aa6de")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Opt1" parent="VBoxContainer/GridContainer" instance=ExtResource("3_1sg75")]
layout_mode = 2

[node name="Opt2" parent="VBoxContainer/GridContainer" instance=ExtResource("3_1sg75")]
layout_mode = 2

[node name="Opt3" parent="VBoxContainer/GridContainer" instance=ExtResource("3_1sg75")]
layout_mode = 2

[node name="Opt4" parent="VBoxContainer/GridContainer" instance=ExtResource("3_1sg75")]
layout_mode = 2

[node name="Replay" type="Button" parent="VBoxContainer/GridContainer"]
self_modulate = Color(0, 3.524, 0.66, 1)
custom_minimum_size = Vector2(300, 135)
layout_mode = 2
size_flags_horizontal = 3
expand_icon = true

[node name="Split" type="HBoxContainer" parent="VBoxContainer/GridContainer/Replay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/GridContainer/Replay/Split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/GridContainer/Replay/Split/Labels"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("4_vlxba")
theme_override_font_sizes/font_size = 21
text = "Replay Gamemode"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_aa6de")

[node name="VoteCount" type="Label" parent="VBoxContainer/GridContainer/Replay/Split/Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/line_spacing = -4
text = "0/0 Votes"
horizontal_alignment = 2
autowrap_mode = 3
script = ExtResource("2_aa6de")

[node name="Sandbox" type="Button" parent="VBoxContainer/GridContainer"]
self_modulate = Color(2, 4, 4, 1)
custom_minimum_size = Vector2(300, 135)
layout_mode = 2
size_flags_horizontal = 3
expand_icon = true

[node name="Split" type="HBoxContainer" parent="VBoxContainer/GridContainer/Sandbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/GridContainer/Sandbox/Split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/GridContainer/Sandbox/Split/Labels"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("4_vlxba")
theme_override_font_sizes/font_size = 21
text = "Return to Sandbox Mode"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_aa6de")

[node name="VoteCount" type="Label" parent="VBoxContainer/GridContainer/Sandbox/Split/Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/line_spacing = -4
text = "0/0 Votes"
horizontal_alignment = 2
autowrap_mode = 3
script = ExtResource("2_aa6de")
